game/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
spec:
  selector:
    matchLabels:
      app: game
  replicas: 2
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: game
        image: marizmendi/2048:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
