game/service.yml
apiVersion: v1
kind: Service
metadata:
  name: game
spec:
  selector:
    app: game
  ports:
  - port: 80
    targetPort: 80
