game/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/auth-tls-secret: default/cloudflare-client
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header CF-Connecting-IP;
      set_real_ip_from 0.0.0.0/0;
spec:
  tls:
  - hosts:
    - arizxyz.com
    secretName: cloudflare-tls
  rules:
  - host: arizxyz.com
    http:
      paths:
      - path: /game/
        pathType: Prefix
        backend:
          service:
            name: game
            port:
              number: 80
